tests/snapshots/integration__integration_tests__spacing_edge_cases__alignment_extreme_diffs.snap
---
source: tests/integration_tests/spacing_edge_cases.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "180"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpgLbzsE/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[2mBranch[0m  [2mAge          [0m  [2mWT +/-[0m  [2mCommit  [0m  [2mMessage       [0m  [2mPath[0m
[1m[35mmain  [0m  [2m10 months ago[0m          [1m[35mb834638e[0m  [2mInitial commit[0m  [1m[35m./test-repo[0m
huge    [2m10 months ago[0m          [2mb834638e[0m  [2mInitial commit[0m  ./huge
tiny    [2m10 months ago[0m   [32m+1[0m [31m-1[0m  [2mb834638e[0m  [2mInitial commit[0m  ./tiny

[2mShowing 3 worktrees, 1 with changes[0m

----- stderr -----
