tests/snapshots/integration__integration_tests__spacing_edge_cases__mixed_length_branch_names.snap
---
source: tests/integration_tests/spacing_edge_cases.rs
info:
  program: wt
  args:
    - list
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpAwmpBm/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
[2mBranch[0m  [2mCommit  [0m  [2mPath[0m
[1m[35mmain  [0m  [1m[35mb834638e[0m  [1m[35m./test-repo[0m
long    [2mb834638e[0m  ./extremely-long-branch-name-that-might-cause-layout-issues
medium  [2mb834638e[0m  ./medium-length-name
x       [2mb834638e[0m  ./x

[2mShowing 4 worktrees[0m

----- stderr -----
